# TraceGraph

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/tracegraph/: __init__.py  analysis.py  cli.py  discovery.py  graph.py  report.py  resolver.py
tests/: test_analysis.py  test_cli.py  test_discovery.py  test_graph.py  test_resolver.py
tests/fixtures/absolute/: expected_edges.json
tests/fixtures/absolute/project/pkg/: a.py
tests/fixtures/aliases/: expected_edges.json
tests/fixtures/aliases/project/pkg/: a.py
tests/fixtures/ambiguity/: expected_edges.json
tests/fixtures/ambiguity/project/: main.py
tests/fixtures/ambiguity/project/pkg/: __init__.py
tests/fixtures/broken/: expected_edges.json
tests/fixtures/broken/project/pkg/: bad.py  good.py
tests/fixtures/cycle/: expected_edges.json
tests/fixtures/cycle/project/pkg/: a.py  b.py
tests/fixtures/cycle_attr/: expected_edges.json
tests/fixtures/cycle_attr/project/pkg/: a.py  b.py
tests/fixtures/cycle_benign/: expected_edges.json
tests/fixtures/cycle_benign/project/pkg/: a.py
tests/fixtures/duplicates/: expected_edges.json
tests/fixtures/duplicates/project/pkg/: a.py
tests/fixtures/dynamic/: expected_edges.json
tests/fixtures/dynamic/project/pkg/: loader.py
tests/fixtures/lazy/: expected_edges.json
tests/fixtures/lazy/project/pkg/: a.py  b.py  e.py
tests/fixtures/namespace/: expected_edges.json
tests/fixtures/namespace/project/ns/: alpha.py  beta.py
tests/fixtures/reexport/: expected_edges.json
tests/fixtures/reexport/project/: app.py
tests/fixtures/relative/: expected_edges.json
tests/fixtures/relative/project/pkg/: __init__.py  a.py
tests/fixtures/relative/project/pkg/sub/: mod.py
tests/fixtures/src_layout/: expected_edges.json
tests/fixtures/src_layout/project/src/mypkg/: core.py
tests/fixtures/src_layout/project/tests/: test_core.py
validation/: _context_plugin.py  validate_tia.py
